@@ -1,4 +1,7 @@
 {{$NEXT}}
+  - Minion requirement bumped to 10.0.
+  - Changed reset method to require options for what to reset and allow for
+    locks to be reset without resetting the whole queue.
 
 4.005     2019-08-05 11:00:01 EDT
   - Allow fields to be removed with note method.
